// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apd state profile, Medicaid office component renders correctly 1`] = `
<Fragment>
  <fieldset>
    <legend>
      Medicaid director
    </legend>
    <TextField
      label="Name"
      name="apd-state-profile-mdname"
      onChange={[Function]}
      type="text"
      value="name"
    />
    <TextField
      label="Email address"
      name="apd-state-profile-mdemail"
      onChange={[Function]}
      type="text"
      value="email"
    />
    <TextField
      label="Phone number"
      name="apd-state-profile-mdphone"
      onChange={[Function]}
      type="text"
      value="phone"
    />
  </fieldset>
  <fieldset>
    <legend>
      Medicaid office
    </legend>
    <TextField
      label="Address"
      name="apd-state-profile-addr1"
      onChange={[Function]}
      type="text"
      value="address 1"
    />
    <TextField
      hint="Optional"
      label="Address continued"
      name="apd-state-profile-addr2"
      onChange={[Function]}
      type="text"
      value="address 2"
    />
    <div
      className="ds-l-row"
    >
      <TextField
        className="ds-l-col--6"
        label="City"
        name="apd-state-profile-city"
        onChange={[Function]}
        type="text"
        value="city"
      />
      <div
        className="ds-u-clearfix ds-l-col--3"
      >
        <FormLabel
          component="label"
        >
          State
        </FormLabel>
        <Select
          label="State"
          name="apd-state-profile-state"
          onChange={[Function]}
          value="state"
        >
          <option
            key="Alabama"
            value="AL"
          >
            AL - Alabama
          </option>
          <option
            key="Alaska"
            value="AK"
          >
            AK - Alaska
          </option>
          <option
            key="Arizona"
            value="AZ"
          >
            AZ - Arizona
          </option>
          <option
            key="Arkansas"
            value="AR"
          >
            AR - Arkansas
          </option>
          <option
            key="California"
            value="CA"
          >
            CA - California
          </option>
          <option
            key="Colorado"
            value="CO"
          >
            CO - Colorado
          </option>
          <option
            key="Connecticut"
            value="CT"
          >
            CT - Connecticut
          </option>
          <option
            key="Delaware"
            value="DE"
          >
            DE - Delaware
          </option>
          <option
            key="Florida"
            value="FL"
          >
            FL - Florida
          </option>
          <option
            key="Georgia"
            value="GA"
          >
            GA - Georgia
          </option>
          <option
            key="Hawaii"
            value="HI"
          >
            HI - Hawaii
          </option>
          <option
            key="Idaho"
            value="ID"
          >
            ID - Idaho
          </option>
          <option
            key="Iowa"
            value="IA"
          >
            IA - Iowa
          </option>
          <option
            key="Illinois"
            value="IL"
          >
            IL - Illinois
          </option>
          <option
            key="Indiana"
            value="IN"
          >
            IN - Indiana
          </option>
          <option
            key="Kansas"
            value="KS"
          >
            KS - Kansas
          </option>
          <option
            key="Kentucky"
            value="KY"
          >
            KY - Kentucky
          </option>
          <option
            key="Louisiana"
            value="LA"
          >
            LA - Louisiana
          </option>
          <option
            key="Maine"
            value="ME"
          >
            ME - Maine
          </option>
          <option
            key="Maryland"
            value="MD"
          >
            MD - Maryland
          </option>
          <option
            key="Massachusetts"
            value="MA"
          >
            MA - Massachusetts
          </option>
          <option
            key="Michigan"
            value="MI"
          >
            MI - Michigan
          </option>
          <option
            key="Minnesota"
            value="MN"
          >
            MN - Minnesota
          </option>
          <option
            key="Mississippi"
            value="MS"
          >
            MS - Mississippi
          </option>
          <option
            key="Missouri"
            value="MO"
          >
            MO - Missouri
          </option>
          <option
            key="Montana"
            value="MT"
          >
            MT - Montana
          </option>
          <option
            key="Nebraska"
            value="NE"
          >
            NE - Nebraska
          </option>
          <option
            key="North Carolina"
            value="NC"
          >
            NC - North Carolina
          </option>
          <option
            key="North Dakota"
            value="ND"
          >
            ND - North Dakota
          </option>
          <option
            key="New Hampshire"
            value="NH"
          >
            NH - New Hampshire
          </option>
          <option
            key="New Jersey"
            value="NJ"
          >
            NJ - New Jersey
          </option>
          <option
            key="New Mexico"
            value="NM"
          >
            NM - New Mexico
          </option>
          <option
            key="Nevada"
            value="NV"
          >
            NV - Nevada
          </option>
          <option
            key="New York"
            value="NY"
          >
            NY - New York
          </option>
          <option
            key="Ohio"
            value="OH"
          >
            OH - Ohio
          </option>
          <option
            key="Oklahoma"
            value="OK"
          >
            OK - Oklahoma
          </option>
          <option
            key="Oregon"
            value="OR"
          >
            OR - Oregon
          </option>
          <option
            key="Pennsylvania"
            value="PA"
          >
            PA - Pennsylvania
          </option>
          <option
            key="Rhode Island"
            value="RI"
          >
            RI - Rhode Island
          </option>
          <option
            key="South Carolina"
            value="SC"
          >
            SC - South Carolina
          </option>
          <option
            key="South Dakota"
            value="SD"
          >
            SD - South Dakota
          </option>
          <option
            key="Tennessee"
            value="TN"
          >
            TN - Tennessee
          </option>
          <option
            key="Texas"
            value="TX"
          >
            TX - Texas
          </option>
          <option
            key="Utah"
            value="UT"
          >
            UT - Utah
          </option>
          <option
            key="Vermont"
            value="VT"
          >
            VT - Vermont
          </option>
          <option
            key="Virginia"
            value="VA"
          >
            VA - Virginia
          </option>
          <option
            key="Washington"
            value="WA"
          >
            WA - Washington
          </option>
          <option
            key="West Virginia"
            value="WV"
          >
            WV - West Virginia
          </option>
          <option
            key="Wisconsin"
            value="WI"
          >
            WI - Wisconsin
          </option>
          <option
            key="Wyoming"
            value="WY"
          >
            WY - Wyoming
          </option>
          <option
            key="District of Columbia"
            value="DC"
          >
            DC - District of Columbia
          </option>
          <option
            key="American Samoa"
            value="AS"
          >
            AS - American Samoa
          </option>
          <option
            key="Guam"
            value="GU"
          >
            GU - Guam
          </option>
          <option
            key="Northern Mariana Islands"
            value="MP"
          >
            MP - Northern Mariana Islands
          </option>
          <option
            key="Puerto Rico"
            value="PR"
          >
            PR - Puerto Rico
          </option>
          <option
            key="U.S. Virgin Islands"
            value="VI"
          >
            VI - U.S. Virgin Islands
          </option>
        </Select>
      </div>
    </div>
    <TextField
      label="ZIP Code"
      mask="zip"
      name="apd-state-profile-zip"
      onChange={[Function]}
      type="text"
      value="zip"
    />
  </fieldset>
</Fragment>
`;

exports[`apd state profile, Medicaid office component renders correctly 2`] = `
<Fragment>
  <fieldset>
    <legend>
      Medicaid director
    </legend>
    <TextField
      label="Name"
      name="apd-state-profile-mdname"
      onChange={[Function]}
      type="text"
      value="a"
    />
    <TextField
      label="Email address"
      name="apd-state-profile-mdemail"
      onChange={[Function]}
      type="text"
      value="email"
    />
    <TextField
      label="Phone number"
      name="apd-state-profile-mdphone"
      onChange={[Function]}
      type="text"
      value="phone"
    />
  </fieldset>
  <fieldset>
    <legend>
      Medicaid office
    </legend>
    <TextField
      label="Address"
      name="apd-state-profile-addr1"
      onChange={[Function]}
      type="text"
      value="address 1"
    />
    <TextField
      hint="Optional"
      label="Address continued"
      name="apd-state-profile-addr2"
      onChange={[Function]}
      type="text"
      value="address 2"
    />
    <div
      className="ds-l-row"
    >
      <TextField
        className="ds-l-col--6"
        label="City"
        name="apd-state-profile-city"
        onChange={[Function]}
        type="text"
        value="city"
      />
      <div
        className="ds-u-clearfix ds-l-col--3"
      >
        <FormLabel
          component="label"
        >
          State
        </FormLabel>
        <Select
          label="State"
          name="apd-state-profile-state"
          onChange={[Function]}
          value="state"
        >
          <option
            key="Alabama"
            value="AL"
          >
            AL - Alabama
          </option>
          <option
            key="Alaska"
            value="AK"
          >
            AK - Alaska
          </option>
          <option
            key="Arizona"
            value="AZ"
          >
            AZ - Arizona
          </option>
          <option
            key="Arkansas"
            value="AR"
          >
            AR - Arkansas
          </option>
          <option
            key="California"
            value="CA"
          >
            CA - California
          </option>
          <option
            key="Colorado"
            value="CO"
          >
            CO - Colorado
          </option>
          <option
            key="Connecticut"
            value="CT"
          >
            CT - Connecticut
          </option>
          <option
            key="Delaware"
            value="DE"
          >
            DE - Delaware
          </option>
          <option
            key="Florida"
            value="FL"
          >
            FL - Florida
          </option>
          <option
            key="Georgia"
            value="GA"
          >
            GA - Georgia
          </option>
          <option
            key="Hawaii"
            value="HI"
          >
            HI - Hawaii
          </option>
          <option
            key="Idaho"
            value="ID"
          >
            ID - Idaho
          </option>
          <option
            key="Iowa"
            value="IA"
          >
            IA - Iowa
          </option>
          <option
            key="Illinois"
            value="IL"
          >
            IL - Illinois
          </option>
          <option
            key="Indiana"
            value="IN"
          >
            IN - Indiana
          </option>
          <option
            key="Kansas"
            value="KS"
          >
            KS - Kansas
          </option>
          <option
            key="Kentucky"
            value="KY"
          >
            KY - Kentucky
          </option>
          <option
            key="Louisiana"
            value="LA"
          >
            LA - Louisiana
          </option>
          <option
            key="Maine"
            value="ME"
          >
            ME - Maine
          </option>
          <option
            key="Maryland"
            value="MD"
          >
            MD - Maryland
          </option>
          <option
            key="Massachusetts"
            value="MA"
          >
            MA - Massachusetts
          </option>
          <option
            key="Michigan"
            value="MI"
          >
            MI - Michigan
          </option>
          <option
            key="Minnesota"
            value="MN"
          >
            MN - Minnesota
          </option>
          <option
            key="Mississippi"
            value="MS"
          >
            MS - Mississippi
          </option>
          <option
            key="Missouri"
            value="MO"
          >
            MO - Missouri
          </option>
          <option
            key="Montana"
            value="MT"
          >
            MT - Montana
          </option>
          <option
            key="Nebraska"
            value="NE"
          >
            NE - Nebraska
          </option>
          <option
            key="North Carolina"
            value="NC"
          >
            NC - North Carolina
          </option>
          <option
            key="North Dakota"
            value="ND"
          >
            ND - North Dakota
          </option>
          <option
            key="New Hampshire"
            value="NH"
          >
            NH - New Hampshire
          </option>
          <option
            key="New Jersey"
            value="NJ"
          >
            NJ - New Jersey
          </option>
          <option
            key="New Mexico"
            value="NM"
          >
            NM - New Mexico
          </option>
          <option
            key="Nevada"
            value="NV"
          >
            NV - Nevada
          </option>
          <option
            key="New York"
            value="NY"
          >
            NY - New York
          </option>
          <option
            key="Ohio"
            value="OH"
          >
            OH - Ohio
          </option>
          <option
            key="Oklahoma"
            value="OK"
          >
            OK - Oklahoma
          </option>
          <option
            key="Oregon"
            value="OR"
          >
            OR - Oregon
          </option>
          <option
            key="Pennsylvania"
            value="PA"
          >
            PA - Pennsylvania
          </option>
          <option
            key="Rhode Island"
            value="RI"
          >
            RI - Rhode Island
          </option>
          <option
            key="South Carolina"
            value="SC"
          >
            SC - South Carolina
          </option>
          <option
            key="South Dakota"
            value="SD"
          >
            SD - South Dakota
          </option>
          <option
            key="Tennessee"
            value="TN"
          >
            TN - Tennessee
          </option>
          <option
            key="Texas"
            value="TX"
          >
            TX - Texas
          </option>
          <option
            key="Utah"
            value="UT"
          >
            UT - Utah
          </option>
          <option
            key="Vermont"
            value="VT"
          >
            VT - Vermont
          </option>
          <option
            key="Virginia"
            value="VA"
          >
            VA - Virginia
          </option>
          <option
            key="Washington"
            value="WA"
          >
            WA - Washington
          </option>
          <option
            key="West Virginia"
            value="WV"
          >
            WV - West Virginia
          </option>
          <option
            key="Wisconsin"
            value="WI"
          >
            WI - Wisconsin
          </option>
          <option
            key="Wyoming"
            value="WY"
          >
            WY - Wyoming
          </option>
          <option
            key="District of Columbia"
            value="DC"
          >
            DC - District of Columbia
          </option>
          <option
            key="American Samoa"
            value="AS"
          >
            AS - American Samoa
          </option>
          <option
            key="Guam"
            value="GU"
          >
            GU - Guam
          </option>
          <option
            key="Northern Mariana Islands"
            value="MP"
          >
            MP - Northern Mariana Islands
          </option>
          <option
            key="Puerto Rico"
            value="PR"
          >
            PR - Puerto Rico
          </option>
          <option
            key="U.S. Virgin Islands"
            value="VI"
          >
            VI - U.S. Virgin Islands
          </option>
        </Select>
      </div>
    </div>
    <TextField
      label="ZIP Code"
      mask="zip"
      name="apd-state-profile-zip"
      onChange={[Function]}
      type="text"
      value="zip"
    />
  </fieldset>
</Fragment>
`;
